syntax = "proto3";
package pt.ulisboa.tecnico.classes.contract.naming;
import "ClassesDefinitions.proto";

// NamingServer -> NamingServer Service

message RegisterRequest {
  string name = 1;
  string host = 2;
  int32 port = 3;
  repeated string qualifiers = 4;
}

message RegisterResponse {
  int32 id = 1;
}

message LookupRequest {
  string name = 1;
  repeated string qualifiers = 2;
}

message LookupResponse {
  repeated Server servers = 1;
}

message DeleteRequest {
  string name = 1;
  string host = 2;
  int32 port = 3;
  int32 id = 4;
}

message DeleteResponse {
  // Intentionally left empty
}

service NamingServerService {
  rpc register(RegisterRequest) returns (RegisterResponse);
  rpc lookup(LookupRequest) returns (LookupResponse);
  rpc delete(DeleteRequest) returns (DeleteResponse);
}
